tests/error/declaration_of_unresolved_type.c
// fail "'unresolved': [0] Undeclared identifier."

struct unresolved;
struct unresolved a;

int main(){
	
}